# gcpdemo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy.yml  infra.yml
app/: gemini.py  long_term.py  main.py  short_term.py
app/static/: index.html
docs/: ARCHITECTURE.md  DECISIONS.md  INTERVIEW.md  PRD.md  RUNBOOK.md
infra/: README.md  artifact_registry.tf  cloud_run.tf  firestore.tf  main.tf  outputs.tf  service_accounts.tf  state.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
prototype/f1/: index.html
prototype/f2/: index.html
prototype/f3/: index.html
